--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#~0.5.4",
     "core-elements": "Polymer/core-elements#~0.5.4",
-    "paper-elements": "Polymer/paper-elements#~0.5.4"
+    "paper-elements": "Polymer/paper-elements#~0.5.4",
+    "google-youtube": "GoogleWebComponents/google-youtube#~1.0.5"
   }
 }
